<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:binding="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.fr.wanandroid.main.ui.main.vm.ItemArticleViewModel" />

        <variable
            name="viewModel"
            type="com.fr.wanandroid.main.ui.main.vm.ItemArticleViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        binding:isThrottleFirst="@{viewModel.isThrottleFirst}"
        binding:onClickCommand="@{viewModel.itemClick}">

        <ImageView
            android:id="@+id/iv_author"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/author"
            android:src="@drawable/ic_author_24dp"
            binding:layout_constraintBottom_toTopOf="@+id/tv_title"
            binding:layout_constraintLeft_toLeftOf="@id/guideline"
            binding:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@{viewModel.entity.author != null ? viewModel.entity.author : viewModel.entity.shareUser}"
            binding:layout_constraintBottom_toTopOf="@+id/tv_title"
            binding:layout_constraintStart_toEndOf="@+id/iv_author"
            binding:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:maxLines="2"
            android:text="@{viewModel.entity.title}"
            binding:layout_constrainedWidth="true"
            binding:layout_constraintBottom_toTopOf="parent"
            binding:layout_constraintEnd_toEndOf="parent"
            binding:layout_constraintStart_toEndOf="@id/guideline"
            binding:layout_constraintTop_toBottomOf="parent" />

        <ImageView
            android:id="@+id/iv_like"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/like"
            android:src="@drawable/ic_unlike_24dp"
            binding:layout_constraintBottom_toBottomOf="parent"
            binding:layout_constraintStart_toStartOf="@+id/guideline"
            binding:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <ImageView
            android:id="@+id/iv_time"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/time"
            android:src="@drawable/ic_time_24dp"
            binding:layout_constraintBottom_toBottomOf="parent"
            binding:layout_constraintEnd_toStartOf="@+id/guideline2"
            binding:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@{String.valueOf(viewModel.entity.publishTime)}"
            binding:layout_constraintBottom_toBottomOf="parent"
            binding:layout_constraintStart_toStartOf="@+id/guideline2"
            binding:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            binding:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            binding:layout_constraintGuide_percent="0.30" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>